chore: husky 설치 및 설정 (#21) (#24)
* [WEB-33] chore: husky 설치

* [WEB-33] chore: gitignore 수정

* [WEB-33] chore: husky 설정

Changes:
- package.json:
  1. main 브랜치에서는 prepare-commit-msg가 실행되지 않도록 설정

- .husky/commit-msg:
  1. 커밋 타입(feat, fix 등)이 포함됐는지 검사하여 누락 시 커밋 거부

- .husky/prepare-commit-msg:
  1. 커밋 타입 앞에 자동으로 이모티콘 추가
  2. 작업 브랜치에서 지라 태스크 넘버 자동 삽입

--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "ossca-team_nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.2",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "ossca-team_nextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"postinstall": "husky install",
+		"format": "prettier --cache --write .",
+		"lint": "next lint && eslint --cache ."
+	},
+	"jira-prepare-commit-msg": {
+		"messagePattern": "[$J] $M",
+		"allowEmptyCommitMessage": false,
+		"ignoredBranchesPattern": "^(master|main|dev|develop|development|release)$"
+	},
+	"dependencies": {
+		"next": "15.3.2",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@typescript-eslint/eslint-plugin": "^8.32.1",
+		"@typescript-eslint/parser": "^8.32.1",
+		"eslint": "^9.26.0",
+		"eslint-config-next": "15.3.2",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-prettier": "^5.4.0",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"husky": "^9.1.7",
+		"prettier": "^3.5.3",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
