--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"eslint-plugin-react": "^7.37.5",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"husky": "^9.1.7",
+		"jira-prepare-commit-msg": "^1.7.2",
 		"prettier": "^3.5.3",
 		"tailwindcss": "^4",
 		"typescript": "^5"
