chore: 코드래빗 설정 업데이트 (#45)
- PR 내용 요약 기능 비활성화
- 코드래빗이 자동으로 생성하는 시 기능 비활성화

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -4,9 +4,11 @@ reviews:
   profile: 'chill'
   # 코드래빗이 자동으로 PR을 닫음
   request_changes_workflow: false
-  # 코드래빗이 PR 내용을 요약
-  high_level_summary: true
+  # 코드래빗이 PR 내용을 수정해서 요약
+  high_level_summary: false
   auto_title_placeholder: '@coderabbitai [WEB-nn] 커밋 타입: 커밋 메세지'
+  # 코드래빗이 자동으로 생성해주는 시 (기본값이 true이기에 따로 설정)
+  poem: false
   # 각 리뷰에 대한 상세 설명
   review_status: true
   collapse_walkthrough: false
