chore: GitHub Actions 워크플로우 수정 (#51)
- main 브랜치와 stage 브랜치에 커밋이 발생할 시 해당 브랜치에 존재하는 모든 파일을 output 디렉토리로 복사하는 단계 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Copy all files to output
+        run: |
+          mkdir -p output
+          cp -R ./* ./output
+
       - name: Push to personal repo
         uses: cpina/github-action-push-to-another-repository@main
         env:
