--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Copy all files to output
         run: |
           mkdir -p output
-          cp -R ./* ./output
+          rsync -av --exclude output ./ ./output
 
       - name: Push to personal repo
         uses: cpina/github-action-push-to-another-repository@main
