chore: GitHub Actions 워크플로우 파일 복사 시 .git 디렉토리 제외 (#51)
- nothing to commit 오류를 해결하기 위해 현재 레포의 git 폴더는 제외하고 복사

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Copy all files to output
         run: |
           mkdir -p output
-          rsync -av --exclude output ./ ./output
+          rsync -av --exclude='.git' ./ ./output
 
       - name: Push to personal repo
         uses: cpina/github-action-push-to-another-repository@main
